# pdet-fetcher

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data-wrangling/0-raw-to-parquet/: 1-decompress-convert-rais.py
src/pdet_data/: __init__.py  __main__.py  fetch.py  reader.py
src/pdet_fetcher/: __init__.py  __main__.py  cli.py  constants.py  fetch.py  meta.py  plugin.py  reader.py  storage.py  wrangling.py
tests/: test_fetch.py  test_reader.py  test_storage.py
