[project]
name = "pdet-data"
version = "0.1.1"
description = "pdet-data: Collect microdata from PDET"
readme = "README.md"
authors = [
    {name="Daniel Komesu", email="danielkomesu@gmail.com"},
]

requires-python = ">=3.10"

dependencies = [
    "tqdm>=4.67",
    "polars>=1.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
