[project]
name = "pdet-data"
version = "0.1.1"
description = "Collect microdata from PDET (CAGED, RAIS)"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "pdet",
    "caged",
    "rais",
    "labor",
    "microdata",
    "brazil",
    "open-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "polars>=1.39",
    "quantilica-core",
    "tqdm>=4.67",
]

[project.urls]
Homepage = "https://github.com/Quantilica/pdet-data"
Repository = "https://github.com/Quantilica/pdet-data"
Issues = "https://github.com/Quantilica/pdet-data/issues"

[project.scripts]
pdet-data = "pdet_data.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12",
]

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "UP", "B"]

[tool.uv.sources]
quantilica-core = { path = "../quantilica-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
