[project]
name = "pdet-fetcher"
version = "0.1.1"
description = "Collect microdata from PDET (CAGED, RAIS)"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "pdet",
    "caged",
    "rais",
    "labor",
    "microdata",
    "brazil",
    "open-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "polars>=1.39",
    "quantilica-core @ git+https://github.com/Quantilica/quantilica-core.git",
    "tqdm>=4.67",
]

[project.urls]
Homepage = "https://github.com/Quantilica/pdet-fetcher"
Repository = "https://github.com/Quantilica/pdet-fetcher"
Issues = "https://github.com/Quantilica/pdet-fetcher/issues"

[project.scripts]
pdet-fetcher = "pdet_fetcher.__main__:main"

[project.entry-points."quantilica.fetchers"]
pdet = "pdet_fetcher.plugin:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12",
]

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "UP", "B"]

[tool.uv.sources]
quantilica-core = { path = "../quantilica-core", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
